--- a/sorting_hat.html
+++ b/sorting_hat.html
@@ -93,17 +93,56 @@
     });
 
     // house array...could also make this an object. Is a list an object? Blaahhh.
-    var Houses = ["Gryffindor", "Hufflepuff", "Ravenclaw", "Slytherin", "Dumbledore's Army"];
+    // var house_names = ["Gryffindor", "Hufflepuff", "Ravenclaw", "Slytherin", "Dumbledore's Army"];
+
+    // This is better for debugging -- hard-coded strings that are mispelled won't throw helpful errors.
+    var GRYFFINDOR = "Gryffindor";
+    var HUFFLEPUFF = "Hufflepuff";
+    var RAVENCLAW = "Ravenclaw";
+    var SLYTHERIN = "Slytherin";
+    var DUMBLEDORE = "Dumbledore's Army";
+
+    var house_names = [GRYFFINDOR, HUFFLEPUFF, RAVENCLAW, SLYTHERIN, DUMBLEDORE];
     
+    var House = function (name, current_residents, full) {
+        this.houseName = name;
+        this.current_residents = 0;
+        this.full = false;
+
+        // check to see if house is "full" -- a house is not full if it has less than the number of students we're sorting divided by the number of Houses
+        this.isFull = function() {
+            if (this.current_residents < studentCount/houses) {
+                return false
+            }
+            return true
+        }
+
+    }
+
+    var houses = {};
+    for (var i = 0; i < house_names.length; i++) {
+        var house_name = house_names[i]
+        houses[house_name] = new House (house_name)
+    }
+
     // pick a house at random
     // returns random number between min and max, inclusive
     function getRandomInt (min, max) {
-    // Math.random() returns a Number between 0 (inclusive) and 1 (exclusive).
-    return Math.floor(Math.random() * (max - min + 1)) + min;
+        // Math.random() returns a Number between 0 (inclusive) and 1 (exclusive).
+        return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 
-    var randomHouse = Houses[getRandomInt(0, Houses.length - 1)];
-    console.log(randomHouse);
+    var randomHouseKey = house_names[getRandomInt(0, house_names.length - 1)];
+    console.log(houses[randomHouseKey]);
+    console.log(houses[randomHouseKey].isFull());
+
+    // while (houses[randomHouseKey].isFull()) {
+    //     randomHouseKey = house_names[getRandomInt(0, house_names.length - 1)];
+    // }
+
+    // // document.getElementsByClassName() returns an array of all child elements which have any of the given class names
+    // all_elements = document.getElementsByClassName();
+    // console.log(all_elements);
 
 
     </script>
