--- a/testtesttest.html
+++ b/testtesttest.html
@@ -20,7 +20,7 @@
         <div class="form">
             <input type="number" id="student_count">
             <button id="set_student_count">Set Student Count</button>
-            <div id="count"></div>
+            <div id="count"> 0 </div>
         </div>
         <div class="form">
             <input type="text" id="studentName">
@@ -39,13 +39,13 @@
         <div class="house col-md-2" id="Slytherin">
             <h3>Slytherin</h3>
         </div>
-        <div class="house col-md-2" id="DumbledoresArmy">
+        <div class="house col-md-2" id="Dumbledore's Army">
             <h3>Dumbledore's Army</h3>
         </div>
     </div>
 
     <script type="text/javascript">
-        var studentCount = 60;
+        var studentCount = 0;
         var counterButton = document.getElementById("set_student_count");
         counterButton.addEventListener('click', function(){
             //get a variable that points to the div that has the count in it by using document.getElementById("count")
@@ -83,27 +83,29 @@
             var maxHouseValue = studentCount / Object.keys(houses).length;
             var availableHouses = []
             for (house in houses) {
-                if (houses[house].length < maxHouseValue) {
+                if (houses[house].length <= maxHouseValue) {
                     availableHouses.push(house);
                 }
             }
+
             // add individual to a random available house
             var houseNo = Math.floor(Math.random() * availableHouses.length);
             var houseName = availableHouses[houseNo];
             houses[houseName].push(studentName);
 
-            console.log(houses[houseName]);
+            console.log(houseName, houses[houseName]);
 
             // display student's name inside a house
-            // var assignedHouse = document.getElementById(houseName);
-            // var assignedStudent = document.createElement('p');
-            // assignedStudent.innerHTML = studentName;
-            // assignedHouse.appendChild(assignedStudent);
+            var assignedHouse = document.getElementById(houseName);
+            var assignedStudent = document.createElement('p');
+            assignedStudent.innerHTML = studentName;
+            console.log(assignedStudent);
+            assignedHouse.appendChild(assignedStudent);
 
             // reset input field
             studentNameField.value = "";
 
-            // decrement sort counter
+            // Decrement the count of students from the count div.
             var countNode = document.getElementById("count");
             countNode.innerHTML = parseInt(countNode.innerHTML) - 1;
         });
