--- a/laundry.html
+++ b/laundry.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-
 <!-- We want to be able to start a timer
 The timer's length should be specified by an input box
 We should have an input box for washer length, and dryer length
@@ -9,7 +8,6 @@ We want to be able to have multiple timers going
 We want to be able to watch the countdown of each timer update
 Once a timer is done, we want to indicate that it's finished somehow
  -->
-
 
 <html>
   <head>
@@ -45,22 +43,26 @@ Once a timer is done, we want to indicate that it's finished somehow
             <th>Load Type</th>
             <th>Time Remaining</th>
         </tr>
-        <tr>
-            <td class="type">Washing Machine</td>
-            <td class="timer">09:11</td>
-        </tr>
-        <tr>
-            <td class="type">Washing Machine</td>
-            <td class="timer">12:33</td>
-        </tr>
-        <tr>
-            <td class="type">Dryer</td>
-            <td class="timer">54:44</td>
-        </tr>
-        <tr>
-            <td class="type">Dryer</td>
-            <td class="timer">00:01</td>
-        </tr>
+
+        <tbody class="tbody">
+            <tr>
+                <td class="type">Washing Machine</td>
+                <td class="timer">09:11</td>
+            </tr>
+            <tr>
+                <td class="type">Washing Machine</td>
+                <td class="timer">12:33</td>
+            </tr>
+            <tr>
+                <td class="type">Dryer</td>
+                <td class="timer">54:44</td>
+            </tr>
+            <tr>
+                <td class="type">Dryer</td>
+                <td class="timer">00:01</td>
+            </tr>
+        </tbody>
+
     </table>
 
     <script type="text/javascript">
@@ -88,7 +90,6 @@ Once a timer is done, we want to indicate that it's finished somehow
                 minutes = '0' + minutes.toString();
             }
             timer = minutes + ":" + seconds;
-            
             // update the HTML
             timerElements[i].innerHTML = timer;
         }
@@ -106,6 +107,33 @@ Once a timer is done, we want to indicate that it's finished somehow
         }
     }
 
+    var washerButton = document.getElementById("set_washer_time");
+    washerButton.addEventListener('click', function() {
+        var washerTime = document.getElementById('washer_time').value;
+        if (washerTime == '') {
+            return
+        }
+        // find table in the DOM
+        var tableNode = document.getElementsByClassName("tbody")[0];
+        // create table row
+        var newWasherRow = document.createElement('tr');
+        // create table column
+        var newWasherColumn = document.createElement('td');
+        var newTimerColumn = document.createElement('td');
+
+        newWasherColumn.className = "type";
+        newWasherColumn.innerHTML = "Washing Machine";
+
+        newTimerColumn.className = "timer";
+        newTimerColumn.innerHTML = washerTime;
+
+        newWasherRow.appendChild(newWasherColumn);
+        newWasherRow.appendChild(newTimerColumn);
+        tableNode.appendChild(newWasherRow);
+
+        // reset washer length input field
+        document.getElementById('washer_time').value = "";
+    });
 
     setInterval(function() {
         decrementTimers();
